	     in the error handling test was missing () and it is the
	     wrong thing to do in general since this is an enum not a
	     flags field.
	* timidity/controls.c, timidity/effect.c, timidity/oss_a.c,
	  timidity/playmidi.h, timidity/speex_a.c, timidity/wrd.h:
	  [PATCH 8/9] Fix a bunch of: warning: implicit declaration of
	  function ... warnings

2010-09-19  Kentaro Sato <kentaro@ranvis.com>

	* timidity/instrum.[ch]: Fix a bug created at the previous commit
	  that prevents alternate instruments from loading occasionally.
	* timidity/instrum.c, timidity/readmidi.[ch]:
	  Fix a bug that ignores user drum source instrument when
	  "soundfont" directive is used.
	* timidity/playmidi.c: Fix a bug that ignores non-standard drumsets
	  when a soundfont is specified with "soundfont" directive and
	  the instrument is loaded as needed.
	* interface/w32g_pref.c: Fix potential uninitialized pointers access.
	* interface/w32g_syn.c: Add access keys to some of twsyng menuitems.

2010-09-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c (set_val_float_t):
	  Fix an error message for the bad floating point values.
	* timidity/instrum.c: Fix a bug that ignores non-standard drumsets
	  when a soundfont is specified with "soundfont" directive.

2010-08-28  Kentaro Sato <kentaro@ranvis.com>

	* timidity/timidity.c: Remove the current directory for
	  the search path of LoadLibrary(), which is invoked when using
	  output formats that depends on a DLL. (Windows executable)
	  Quick fix for Microsoft Security Advisory 2269637.

2010-07-10  Kentaro Sato <kentaro@ranvis.com>

	* timidity/sndfont.c: Correct soundfont broken loop point
	  to avoid infinite loop on resampling.

2010-06-05  Kentaro Sato <kentaro@ranvis.com>

	* timidity/reverb.[ch]:
	  Fix insertion effect Lo-Fi making loud noise.
	* timidity/mix.c: Workaround for Moog VCF making loud noise.
	* timidity/playmidi.c: Remove obsolete filter frequency cap.

2010-05-23  Kentaro Sato <kentaro@ranvis.com>
